2008-09-21  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp: Try to remove the first few internal frames
	from backtraces.
	(guess-stack-top): New function.
	(call-with-debugging-environment): Use it

	(frame-arguments): Return a list instead of a string.  Don't quote
	symbols.
	(source-locations): Recognize (:internal FOO) functions.

2008-09-21  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (*backtrace-pprint-dispatch-table*):
	Honor *print-escape*.

2008-09-20  Ariel Badichi <abadichi@bezeqint.net>

	* slime.el (slime-with-output-end-mark):
	slime-repl-show-maximum-output no longer accepts any arguments.

2008-09-20  Helmut Eller  <heller@common-lisp.net>

	* test.sh: Parse the -S option as advertized.

	* slime.el (slime-randomize-test-order): Add the * to the
	docstring.
	([def-slime-test] break2): Also CCL is expected to fail here.

2008-09-20  Helmut Eller  <heller@common-lisp.net>

	Fix some of the bugs that I introduced with the last commits.

	* swank-openmcl.lisp (call-with-debugging-environment): Fix typo.
	(call-with-debugger-hook): Bind *break-in-sldb*.
	(backtrace-context): Return nil, not tcr!
	(map-backtrace): Remove the stack< test. Only test for nil.
	(lisp-implementation-type-name): Return "ccl".

	(emacs-inspect (t)): Fix typo.

	(kill-thread): Use join-process. Otherwise we get strange
	"process-reset" errors when disconnecting.
	(thread-alive-p): Implemented with ccl::process-exhausted-p.

	(source-locations): Use labels for helper functions.
	(function-source-location): Now implemented on top of
	source-locations.

2008-09-20  Helmut Eller  <heller@common-lisp.net>

	Fix frame-source-location-for-emacs for CCL.

	* swank-openmcl.lisp (source-locations): New function.
	(create-source-location): New function.
	(frame-source-location-for-emacs): Use it.

2008-09-20  Helmut Eller  <heller@common-lisp.net>
	Fix inspecting of arrays.

	* swank-openmcl.lisp (emacs-inspect :around (t)): call-next-method